--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html lang="en"><head>  <meta charset="UTF-8" />  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  <title>Lunar Majesty</title>  <link rel="stylesheet" href="css/lunar_majesty.css" /></head><body>  <h1 class="main-title">Lunar Calendar in your pocket</h1>  <div class="carousel-container">    <button class="arrow left" onclick="prevCard()"></button>        <div class="carousel-card" id="carousel-card">      <p class="card-title silver-text" id="card-title">Moon today</p>      <p class="card-content" id="card-content">Loading</p>    </div>        <button class="arrow right" onclick="nextCard()"></button>  </div>  <script src="js/lunar_majesty.js"></script></body>    <footer class="site-footer">            <b>This is the best calendar in your pocket.</p>    </footer></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lunar Majesty</title>
+  <link rel="stylesheet" href="css/lunar_majesty.css" />
+  <meta name="description" content="Lunar Calendar in your pocket">
+</head>
+<body>
+  <h1 class="main-title silver-text">Lunar Calendar in your pocket</h1>
+  
+  <div class="carousel-container">
+    <button class="arrow left" onclick="prevCard()" aria-label="Previous card"></button>
+    
+    <div class="carousel-card" id="carousel-card">
+      <h2 class="card-title silver-text" id="card-title">Moon today</h2>
+      <div class="card-content" id="card-content">Loading lunar data...</div>
+    </div>
+    
+    <button class="arrow right" onclick="nextCard()" aria-label="Next card"></button>
+  </div>
+  
+  <footer class="site-footer">
+    <p><b>This is the best calendar in your pocket.</b></p>
+  </footer>
+  
+  <script src="js/lunar_majesty.js"></script>
+</body>
+</html>
