--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lunar Majesty - Updated 2025-07-30 07:18 UTC</title>
+  <title>Lunar Majesty</title>
   <link rel="stylesheet" href="css/lunar_majesty.css" />
   <meta name="description" content="Lunar Calendar in your pocket">
 </head>
@@ -15,6 +15,7 @@
     
     <div class="carousel-card" id="carousel-card">
       <h2 class="card-title silver-text" id="card-title">Moon today</h2>
+      <img class="card-image" id="card-image" src="img/moon.avif" alt="Moon phase" onerror="this.classList.add('hidden')">
       <div class="card-content" id="card-content">Loading lunar data...</div>
     </div>
     
