--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lunar Majesty 🌑 </title>
+  <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/lunar_majesty.css" />
   <meta name="description" content="Lunar Calendar in your pocket">
 </head>
@@ -13,7 +14,6 @@
   <div class="carousel-container">
     <button class="arrow left" onclick="prevCard()" aria-label="Previous card"></button>
     
-    <!-- ✅ ОБЁРТКА для границы -->
     <div class="carousel-card-wrapper">
       <div class="carousel-card" id="carousel-card">
         <h2 class="card-title silver-text" id="card-title">Moon today</h2>
