--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
   </div>
   
   <footer class="site-footer">
-    <p><b>This is the best calendar in your pocket.</b></p>
-  </footer>
+  <p>
+    Created by 
+    <a href="https://github.com/rumiantsevaa/lunar_majesty/tree/main" target="_blank" rel="noopener noreferrer">
+      @rumiantsevaa
+    </a>
+  </p>
+</footer>
   
   <script src="js/lunar_majesty.js"></script>
 </body>
