--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <p>
     Created by 
     <a href="https://github.com/rumiantsevaa/lunar_majesty/tree/main" target="_blank" rel="noopener noreferrer">
-      @rumiantsevaa
+     rumiantsevaa
     </a>
   </p>
 </footer>
