Small code improvements
text-shadow in footer + footer text changes

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
   
   <footer class="site-footer">
   <p>
-    Created by 
+    This project is under MIT license. Created by 
     <a href="https://github.com/rumiantsevaa/lunar_majesty/tree/main" target="_blank" rel="noopener noreferrer">
-     rumiantsevaa
+     rumiantsevaa.
     </a>
   </p>
 </footer>
